update changes, for the buttons.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           </div>
         </div>
 
+        <div class="form-row">
         <div class="select-group">
 
           <select id="transportSelect" class="transport-select">
@@ -58,17 +59,27 @@
             <option value="rideshare">🚗 Ride-hailing</option>
           </select>
         </div>
+        <div class="select-group">
+
+          <select id="languageSelect" class="language-select">
+            <option value="en">English</option>
+            <option value="zu">Zulu</option>
+            <option value="xh">Xhosa</option>
+            <option value="af">Afrikaans</option>
+          </select>
+        </div>
 
         <div class="form-actions enhanced-actions">
           <button type="submit" class="btn primary">
-            <i class="fas fa-route"></i> Find Route
+            <i class="fas fa-route"></i> Route
           </button>
           <button type="button" id="time-estimate-btn" class="btn secondary">
-            <i class="fas fa-clock"></i> Time Only
+            <i class="fas fa-clock"></i> Time
           </button>
           <button type="button" id="price-range-btn" class="btn secondary">
-            <i class="fas fa-money-bill-wave"></i> Price Range
+            <i class="fas fa-money-bill-wave"></i> Price
           </button>
+        </div>
         </div>
       </form>
     </div>
