--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           </label>
           <div class="input-wrapper">
             <input name="from" id="from" placeholder="e.g. Mitchells Plain" type="text" required>
+            <div class="spinner-container" id="from-spinner"></div>
             <div id="from-suggestions" class="suggestions"></div>
           </div>
         </div>
@@ -45,23 +46,30 @@
           <div class="input-wrapper">
             <input name="to" id="to" placeholder="e.g. Cape Town CBD" type="text" required>
             <div id="to-suggestions" class="suggestions"></div>
+            <div class="spinner-container" id="to-spinner"></div>
           </div>
         </div>
 
         <div class="form-row">
         <div class="select-group">
 
-          <select id="transportSelect" class="transport-select">
-            <option value="all">All Transport Types</option>
-            <option value="bus">🚌 Bus</option>
-            <option value="train">🚆 Train</option>
-            <option value="taxi">🚕 Taxi</option>
-            <option value="rideshare">🚗 Ride-hailing</option>
-          </select>
+            <label for="transportSelect">
+                Transport type
+            </label>
+            <select id="transportSelect" class="transport-select">
+                <option value="all">All Transport Types</option>
+                <option value="bus">🚌 Bus</option>
+                <option value="train">🚆 Train</option>
+                <option value="taxi">🚕 Taxi</option>
+                <option value="rideshare">🚗 Ride-hailing</option>
+            </select>
         </div>
         <div class="select-group">
 
-          <select id="languageSelect" class="language-select">
+            <label for="languageSelect">
+                Language
+            </label>
+            <select id="languageSelect" class="transport-select">
             <option value="en">English</option>
             <option value="zu">Zulu</option>
             <option value="xh">Xhosa</option>
