--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
             <input type="password" id="signup-password" required>
           </div>
           <button type="submit" class="auth-btn">Sign Up</button>
+          <div class="oauth-buttons">
+            <button type="button" id="google-signup-btn" class="oauth-btn google-btn">
+              <i class="fab fa-google"></i> Sign up with Google
+            </button>
+            <button type="button" id="facebook-signup-btn" class="oauth-btn facebook-btn">
+              <i class="fab fa-facebook-f"></i> Sign up with Facebook
+            </button>
+          </div>
+
           <p>Already have an account? <a href="#" id="show-login">Login</a></p>
         </form>
 
@@ -143,6 +152,14 @@
             <input type="password" id="login-password" required>
           </div>
           <button type="submit" class="auth-btn">Login</button>
+            <div class="oauth-buttons">
+              <button type="button" id="google-login-btn" class="oauth-btn google-btn">
+                <i class="fab fa-google"></i> Login with Google
+              </button>
+              <button type="button" id="facebook-login-btn" class="oauth-btn facebook-btn">
+                <i class="fab fa-facebook-f"></i> Login with Facebook
+              </button>
+            </div>
           <p>Don't have an account? <a href="#" id="show-signup">Sign Up</a></p>
         </form>
       </div>
